--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'LondrinaSolid-Regular';
+    src: url('/fonts/LondrinaSolid-Regular.ttf') format('truetype');
+}
+
 .bubble-name {
     position: absolute;
     margin-top: 2rem;
